Actualizacion Sopa de Letras
Actualizacion Sopa de Letras

--- a/Actividades/sopaLetras/index.html
+++ b/Actividades/sopaLetras/index.html
@@ -36,9 +36,11 @@
     <div class="panel panel-default">
     <div class="panel-heading"><h4>1.- Escribe las palabras, luego presiona el botón <strong>"Crear Juego"</strong></h4></div>
     <div class="panel-body"><ul id="myTags">
-    <li>Gato</li>
-    <li>Perro</li>
-    <li>Animal</li>
+    <li>Analisis</li>
+    <li>Requisitos</li>
+    <li>Disenio</li>
+	<li>Reconocimiento</li>
+	<li>Revision</li>
 </ul></div>
   </div>
 
